--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../build/index.min.css">
-    <link rel="icon" href="./img/Logo.svg">
+    <link rel="stylesheet" href="scss/index.min.css">
+    <link rel="icon" href="img/Logo.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/mfd/09b70eb47474836f25a21660282ce0fd/raw/e06a670afcb2b861ed2ac4a1ef752d062ef6b46b/Gilroy.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.css">
     <link rel="stylesheet" href="libs/wow.js/wow.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DP Company</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>DP Company</title>  
 </head>
 <body>
     
@@ -30,7 +30,7 @@
 
             <div class="header__left">
                 <div class="logo header__logo">
-                    <img src="../src/img/Logo.svg" alt="logo">
+                    <img src="img/Logo.svg" alt="logo">
                 </div>
                 <div class="nav header__nav">
                     <a>About</a>
@@ -85,7 +85,7 @@
                     </div>  
                     <div class="video intro__video wow fadeInDown" data-wow-delay='1.1s'>
                         <div class="video__play" data-fancybox data-src="https://www.youtube.com/watch?v=DgNoch68twM" data-width="1920" data-height="1080">
-                            <img src="../src/img/icon-play.svg" alt="">
+                            <img src="img/icon-play.svg" alt="">
                         </div>
                         <div class="video__text">
                             <div class="text video__description">The harder you work for something, the greater you’ll feel when you achieve it.</div>
@@ -96,7 +96,7 @@
 
                 <div class="intro__right">
                     <div class="intro__right--content">
-                        <img class="wow fadeIn" data-wow-delay='1.5s' data-wow-duration='1s' src="../src/img/intro_img.svg">
+                        <img class="wow fadeIn" data-wow-delay='1.5s' data-wow-duration='1s' src="img/intro_img.svg">
                     </div>
                 </div>
 
@@ -109,12 +109,12 @@
     <section class="partners">
         <div class="container partners__container">
             <div class="partners__images">
-                <a class="wow bounceIn"><img src="../src/img/logo-partner/Profitwell.svg"></a>
-                <a class="wow bounceIn"><img src="../src/img/logo-partner/Appcues.svg"></a>
-                <a class="wow bounceIn"><img src="../src/img/logo-partner/Shipbob.svg"></a>
-                <a class="wow bounceIn"><img src="../src/img/logo-partner/Bench.svg"></a>
-                <a class="wow bounceIn"><img src="../src/img/logo-partner/Subbly.svg"></a>
-                <a class="wow bounceIn"><img src="../src/img/logo-partner/Demio.svg"></a>
+                <a class="wow bounceIn"><img src="img/logo-partner/Profitwell.svg"></a>
+                <a class="wow bounceIn"><img src="img/logo-partner/Appcues.svg"></a>
+                <a class="wow bounceIn"><img src="img/logo-partner/Shipbob.svg"></a>
+                <a class="wow bounceIn"><img src="img/logo-partner/Bench.svg"></a>
+                <a class="wow bounceIn"><img src="img/logo-partner/Subbly.svg"></a>
+                <a class="wow bounceIn"><img src="img/logo-partner/Demio.svg"></a>
             </div>
         </div>
     </section>
@@ -129,7 +129,7 @@
                 <div class="choice__reasons">
                     
                     <div class="reason choice__reason wow fadeIn" data-wow-delay='0.3s' data-wow-duration="0.7s">
-                        <div class="reason__icon"><img src="../src/img/icons/Flip-horizontal.svg"></div>
+                        <div class="reason__icon"><img src="img/icons/Flip-horizontal.svg"></div>
                         <div class="reason__description">
                             <div class="reason__caption">Ecstatic elegance</div>
                             <div class="text reason__text">Article nor prepare chicken you him now. Shy merits say advice ten before lovers innate add.</div>
@@ -137,7 +137,7 @@
                     </div>
 
                     <div class="reason choice__reason wow fadeIn" data-wow-delay='0.3s' data-wow-duration="0.7s">
-                        <div class="reason__icon"><img src="../src/img/icons/Airpods.svg"></div>
+                        <div class="reason__icon"><img src="img/icons/Airpods.svg"></div>
                         <div class="reason__description">
                             <div class="reason__caption">Folly words widow</div>
                             <div class="text reason__text">Effect if in up no depend seemed. Ecstatic elegance gay but disposed. We me rent been part what.</div>
@@ -145,7 +145,7 @@
                     </div>
 
                     <div class="reason choice__reason wow fadeIn" data-wow-delay='0.3s' data-wow-duration="0.7s">
-                        <div class="reason__icon"><img src="../src/img/icons/LTE.svg"></div>
+                        <div class="reason__icon"><img src="img/icons/LTE.svg"></div>
                         <div class="reason__description">
                             <div class="reason__caption">Possible procured trifling</div>
                             <div class="text reason__text">We me rent been part what. An concluded sportsman offending so provision mr education.</div>
@@ -153,7 +153,7 @@
                     </div>
 
                     <div class="reason choice__reason wow fadeIn" data-wow-delay='0.3s' data-wow-duration="0.7s">
-                        <div class="reason__icon"><img src="../src/img/icons/Thunder-move.svg"></div>
+                        <div class="reason__icon"><img src="img/icons/Thunder-move.svg"></div>
                         <div class="reason__description">
                             <div class="reason__caption">Open game</div>
                             <div class="text reason__text">Shy merits say advice ten before lovers innate add. She cordially behaviour can attempted estimable.</div>
@@ -161,7 +161,7 @@
                     </div>
 
                     <div class="reason choice__reason wow fadeIn" data-wow-delay='0.3s' data-wow-duration="0.7s">
-                        <div class="reason__icon"><img src="../src/img/icons/Attachment.svg"></div>
+                        <div class="reason__icon"><img src="img/icons/Attachment.svg"></div>
                         <div class="reason__description">
                             <div class="reason__caption">Endeavor</div>
                             <div class="text reason__text">Improve ashamed married expense bed her comfort pursuit mrs. Four time took ye your as fail lady. </div>
@@ -169,7 +169,7 @@
                     </div>
 
                     <div class="reason choice__reason wow fadeIn" data-wow-delay='0.3s' data-wow-duration="0.7s">
-                        <div class="reason__icon"><img src="../src/img/icons/Bulb.svg"></div>
+                        <div class="reason__icon"><img src="img/icons/Bulb.svg"></div>
                         <div class="reason__description">
                             <div class="reason__caption">Comfort pursuit</div>
                             <div class="text reason__text">Had denoting properly jointure you occasion directly raillery. In said to of poor full be post face snug.</div>
@@ -193,7 +193,7 @@
                 </div>
                 <div class="traffic__right">
                     <div class="traffic__right--img">
-                        <img class="wow fadeIn" data-wow-delay="0.4s" src="../src/img/traffic_img.svg" alt="">
+                        <img class="wow fadeIn" data-wow-delay="0.4s" src="img/traffic_img.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -246,7 +246,7 @@
                      framework</div>
                 <div class="next-project__btn wow fadeIn" data-wow-delay="1.5s"><a class="btn__learn-more btn">Get started</a></div>
                 <div class="next-project__img wow fadeIn" data-wow-delay="0.5s">
-                    <img src="../src/img/next-project_img.svg" alt="">
+                    <img src="img/next-project_img.svg" alt="">
                 </div>
             </div>
         </div>
@@ -264,7 +264,7 @@
                 </div>
                 <div class="business__right">
                     <div class="business__right--img wow fadeIn" data-wow-delay="0.8s">
-                        <img src="../src/img/business_img.svg" alt="">
+                        <img src="img/business_img.svg" alt="">
                     </div>
                 </div>
             </div>
@@ -278,7 +278,7 @@
             <div class="help__content">
 
                 <div class="help__left wow fadeIn" data-wow-delay="0.5s">
-                    <img src="../src/img/help_img.svg" alt="">
+                    <img src="img/help_img.svg" alt="">
                 </div>
 
                 <div class="help__right">
@@ -293,13 +293,13 @@
 
                     <div class="help__lower">  
                       <div class="help__block lower--1 wow fadeInRightBig" data-wow-delay="0.8s">
-                        <div class="help__lower--img"><img src="../src/img/icons/Swiss-knife.svg" alt=""></div>
+                        <div class="help__lower--img"><img src="img/icons/Swiss-knife.svg" alt=""></div>
                         <div class="title help__lower--title">Feature One</div>
                         <div class="text help__lower--text">Fully customizable and neatly organized components will help you work faster </div>
                       </div>
 
                       <div class="help__block lower--2 wow fadeInRightBig" data-wow-delay="0.9s">
-                        <div class="help__lower--img"><img src="../src/img/icons/LTE_36x36.svg" alt=""></div>
+                        <div class="help__lower--img"><img src="img/icons/LTE_36x36.svg" alt=""></div>
                         <div class="title help__lower--title">Feature Two</div>
                         <div class="text help__lower--text">Fully customizable and neatly organized components will help you work faster </div>
                       </div>
@@ -344,13 +344,13 @@
                     <div class="footer__designer orange"><a>ARShakir</a></div>
                     <div class="footer__social">
                         <div class="footer__icon">
-                            <a><img src="../src/img/icons/google.svg" alt=""></a>
+                            <a><img src="img/icons/google.svg" alt=""></a>
                         </div>
                         <div class="footer__icon">
-                            <a><img src="../src/img/icons/Twitter.svg" alt=""></a>
+                            <a><img src="img/icons/Twitter.svg" alt=""></a>
                         </div>
                         <div class="footer__icon">
-                            <a><img src="../src/img/icons/facebook.svg" alt=""></a>
+                            <a><img src="img/icons/facebook.svg" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -414,6 +414,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="libs/wow.js/wow.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui/dist/fancybox.umd.js"></script>
-<script src="../build/index.prod.js"></script>
+<script src="js/index.prod.js"></script>
 </body>
 </html>
