--- a/index.html
+++ b/index.html
@@ -77,8 +77,10 @@
                         <div class="btn__demo"><a class="btn">Demo</a></div>
                     </div>  
                     <div class="video intro__video wow fadeInDown" data-wow-delay='1.1s'>
-                        <div class="video__play" data-fancybox data-src="https://www.youtube.com/watch?v=DgNoch68twM" data-width="1920" data-height="1080">
+                        <div class="video__play" data-fancybox href="https://www.youtube.com/watch?v=DgNoch68twM">
+                           <a data-fancybox href="https://www.youtube.com/watch?v=DgNoch68twM">
                             <img src="img/icon-play.svg" alt="">
+                           </a>
                         </div>
                         <div class="video__text">
                             <div class="text video__description">The harder you work for something, the greater you’ll feel when you achieve it.</div>
