--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                 <div class="intro__right">
                     <div class="intro__right--content">
-                        <img class="wow fadeIn" data-wow-delay='1.5s' data-wow-duration='1s' src="img/intro_img.svg">
+                        <img class="wow fadeIn" data-wow-delay='1.5s' data-wow-duration='1s' src="img/intro_img.png">
                     </div>
                 </div>
 
