--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 </div>
                 <div class="business__right">
                     <div class="business__right--img wow fadeIn" data-wow-delay="0.8s">
-                        <img src="img/business_img.svg" alt="">
+                        <img src="img/business_img.webp" alt="">
                     </div>
                 </div>
             </div>
